# hoa_insights_surpriseaz

./: .coverage  .gitignore  README.md  conftest.py  pyproject.toml
src/hoa_insights_surpriseaz/: __init__.py  convert_management_data.py  create_change_reports.py  create_reports.py  fetch_api_data.py  fetch_assessor_data.py  fetch_assessor_parcel_data.py  fetch_assessor_parcels.py  fetch_community_management.py  fetch_community_management_data.py  fetch_management_pdf.py  get_updated_parcels.py  main.py  parse_api_data.py  parse_assessor_data.py  parse_assessor_parcels.py  parse_management_data.py  parse_management_pdf.py  process_changed_parcel_data.py  process_updated_data.py  process_updated_parcel_data.py  process_updated_parcels.py  schemas.py  styles.py  update_management.py  update_parcel_data.py  (+1 more)
tests/: conftest.py  surpriseaz-hoa-management.csv  test_database_fixture.py  test_database_seed.py  test_database_update.py  test_fetch_api_data.py  test_fetch_api_data_initial.py  test_fetch_api_data_seed.py  test_fetch_api_data_update.py  test_fixture2.py  test_get_parcel_updates.py  test_get_updated_parcels.py  test_parse_api_data.py  test_parse_api_seed.py  test_parse_api_update.py  test_parse_community_management_data.py  test_parse_management_data.py  test_parse_management_pdf.py  test_process_parcel_data.py  test_process_parcel_seed.py  test_process_parcel_update.py  test_process_updated_parcel_data.py  test_process_updated_parcels.py  test_rdbms.py  test_update_api_data.py  test_update_parcel_data.py  test_update_remote_tables.py  test_utils.py
(+79 files in other folders)
