[project]
name = "hoa_insights_surpriseaz"
version = "0.2.0"
description = "Information on HOA Communitieds"
readme = "README.md"
authors = [
    { name = "Todd S", email = "info@tascs.net" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp-retry>=2.9.1",
    "aiohttp>=3.11.11",
    "sqlalchemy>=2.0.37",
    "python-dateutil>=2.9.0.post0",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "jinja2>=3.1.5",
    "pydantic>=2.10.5",
    "selenium>=4.27.1",
    "pymysql>=1.1.1",
    "sqlalchemy-utils>=0.41.2",
    "tabula-py>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v -s"
pythonpath = "src"
testpaths = [
    "tests"
]

[tool.setuptools.package-data]
"hoa_insights_surpriseaz" = ["py.typed"]

# [tool.setuptools.packages.find]
# where = ["src"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
